# Group3

git/: HEAD  config  index
git/logs/refs/heads/: ros1
git/objects/pack/: pack-fcda80961a445208b81548160c5d493bd6b6bbb1.idx
project_ws/src/multi_robot/: CMakeLists.txt
project_ws/src/multi_robot/description/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
project_ws/src/multi_robot/launch/: multi_turtlebot3_aws_dynamic.launch  multi_turtlebot3_aws_house.launch  multi_turtlebot3_ee3.launch  multi_turtlebot3_ee4.launch  multi_turtlebot3_ee5.launch  multi_turtlebot3_navigation.launch  turtlebot3_aws_navigation.launch  turtlebot3_ee1.launch  turtlebot3_ee3.launch  turtlebot3_ee5.launch  turtlebot3_navigation.launch  turtlebot3_slam.launch  turtlebot3_smallhouse.launch
project_ws/src/multi_robot/launch/navigation/: amcl.launch  amcl_ns.launch
project_ws/src/multi_robot/maps/: aws_house.pgm  map.yaml  tb3_map.pgm
project_ws/src/multi_robot/param/: dwa_local_planner_params_waffle.yaml  move_base_params.yaml
project_ws/src/multi_robot/rviz/: multi_turtlebot3_slam.rviz
project_ws/src/multi_robot/worlds/: EEFloor2.world  EEFloor3.world  EEFloor4.world  EEFloor5.world
project_ws2/src/multi_robot/: package.xml
project_ws2/src/multi_robot/launch/: multi_turtlebot3_aws_navigation.launch  multi_turtlebot3_ee1.launch  multi_turtlebot3_ee2.launch  multi_turtlebot3_slam.launch  multi_turtlebot3_smallhouse.launch  turtlebot3_aws_house.launch  turtlebot3_ee2.launch  (+1 more)
worlds/: small_house.world  small_house_2.world  small_house_dynamic.world
(+8 files in other folders)
